fix alignment navbar, stretch search bar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5341,10 +5341,11 @@ input[type=button].btn-block {
 }
 
 .badge {
+  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
-  font-weight: 700;
+  font-weight: 700 !important;
   line-height: 1;
   text-align: center;
   white-space: nowrap;
